--- a/index.html
+++ b/index.html
@@ -146,6 +146,40 @@
             <div class="skills-card-img name"><img src="img/hibernate-interview-questions-logo.webp" alt=""></div>
         </div>
 
+        <div class="skills-card">
+            <div class="skills-card-name  bar"> SpringBoot
+
+            </div>
+            <div class="skills-card-img name"><img src="img/Spring Boot.png" alt=""></div>
+        </div>
+
+        <div class="skills-card">
+            <div class="skills-card-name  bar"> Maven
+
+            </div>
+            <div class="skills-card-img name"><img src="img/maven.jpg" alt=""></div>
+        </div>
+
+        <div class="skills-card">
+            <div class="skills-card-name  bar"> Security
+
+            </div>
+            <div class="skills-card-img name"><img src="img/Spring Security.jpg" alt=""></div>
+        </div>
+
+        <div class="skills-card">
+            <div class="skills-card-name  bar">Python Flask
+
+            </div>
+            <div class="skills-card-img name"><img src="img/flask.png" alt=""></div>
+        </div>
+        <div class="skills-card">
+            <div class="skills-card-name  bar">MongoDB
+
+            </div>
+            <div class="skills-card-img name"><img src="img/MongoDB.png" alt=""></div>
+        </div>
+
     </section>
 
     <!-------------------------------------------------- SKILLS ---------------------------------------------------->
@@ -156,7 +190,7 @@
     <h1 class="mainheading" id="projectss">PROJECTS</h1>
     <section title="Projects" id="projects">
 
-        <!-------------------------------------------------- PROJECT 5 ---------------------------------------------------->
+        <!-------------------------------------------------- PROJECT 1 ---------------------------------------------------->
         <div class="project-card">
             <p class="project-description">MasaiBuilds - Teamiply </p>
             <img src="img/masaibuild - teamiply.png" alt="">
@@ -174,7 +208,7 @@
             </div>
 
         </div>
-        <!-------------------------------------------------- PROJECT 5 ---------------------------------------------------->
+        <!-------------------------------------------------- PROJECT 2 ---------------------------------------------------->
         <div class="project-card">
             <p class="project-description">Automation Auction System </p>
             <img src="img/portifolio5.png" alt="">
@@ -193,7 +227,7 @@
             </div>
 
         </div>
-<!-------------------------------------------------- PROJECT 1 ---------------------------------------------------->
+<!-------------------------------------------------- PROJECT 3 ---------------------------------------------------->
         <div class="project-card">
             <p class="project-description">Clone of Famous Footwear </p>
             <img src="img/portifolio1.png" alt="">
@@ -209,7 +243,7 @@
             </div>
 
         </div>
-<!-------------------------------------------------- PROJECT 2 ---------------------------------------------------->
+<!-------------------------------------------------- PROJECT 4 ---------------------------------------------------->
         <div class="project-card">
             <p class="project-description">Clone of Naukri</p>
             <img src="img/portifolio2.png" alt="">
@@ -225,7 +259,7 @@
             </div>
 
         </div>
-<!-------------------------------------------------- PROJECT 3 ---------------------------------------------------->
+<!-------------------------------------------------- PROJECT 5 ---------------------------------------------------->
         <div class="project-card">
             <p class="project-description">Clone of Over Stock Clone</p>
             <img src="img/portifolio3.png" alt="">
@@ -239,7 +273,7 @@
                         link</a></p>
             </div>
         </div>
-<!-------------------------------------------------- PROJECT 4 ---------------------------------------------------->
+<!-------------------------------------------------- PROJECT 6---------------------------------------------------->
         <div class="project-card">
             <p class="project-description">Restaurant Management System </p>
             <img src="img/portifolio4.png" alt="">
@@ -260,24 +294,26 @@
 
 
 <!-------------------------------------------------- PROJECT 6 ---------------------------------------------------->
-        <!-- <div class="project-card">
-            <p class="project-description">   </p>
-            <img src="#" alt="">
-            <div class="desc">Clone of KindMeal.my which is a Malaysia's top meat-free
-                lifestyle platform. Save lives, health, environment & money
-                with tasty deals. Dine instantly, no pre-payment or booking.</div>
-            <title class="project-title">Weather App</title>
-            <h3 class="project-tech-stack">Html | CSS | JavaScript</h3>
+        <div class="project-card">
+            <p class="project-description"> Portfolio Management System  </p>
+            <img src="img/portfolio.png" alt="">
+            <div class="desc">Project Prism is a Portfolio Management Application designed to streamline the process of project 
+                and task management for portfolio managers. This web application provides a user-friendly interface for managing
+                 portfolio manager profiles, projects, tasks, and resources efficiently. It allows users to perform CRUD 
+                 (Create, Read, Update, Delete) operations on these entities, manage relationships between them 
+                and provides advanced features such as pagination, filtering, and sorting.</div>
+            <title class="project-title">Portfolio Management System</title>
+            <h3 class="project-tech-stack">Python| Flask | MySQL | React JS</h3>
             <div>
-                <p class="project-github-link"><a href="#"><i
+                <p class="project-github-link"><a href="https://github.com/SakthivelMadhu/Portfolio_Management_Application"><i
                             class="fa-brands fa-github"></i></a>
                 </p>
-                <p class="project-deployed-link"><a href="#"> Deployed
+                <p class="project-deployed-link"><a href="https://drive.google.com/file/d/1R35QZhF5EBD2mC6GMkuvJ7COcmagLj89/view?usp=drive_link"> Deployed
                         link</a>
                 </p>
             </div>
 
-        </div> -->
+        </div>
 
 
         
