--- a/index.html
+++ b/index.html
@@ -180,6 +180,40 @@
             <div class="skills-card-img name"><img src="img/MongoDB.png" alt=""></div>
         </div>
 
+        <div class="skills-card">
+            <div class="skills-card-name  bar"> Spark
+
+            </div>
+            <div class="skills-card-img name"><img src="img/apcheSpark.png" alt=""></div>
+        </div>
+
+        <div class="skills-card">
+            <div class="skills-card-name  bar">Hadoop Yarn
+
+            </div>
+            <div class="skills-card-img name"><img src="img/yarn.jpg" alt=""></div>
+        </div>
+
+        <div class="skills-card">
+            <div class="skills-card-name  bar"> Impala
+
+            </div>
+            <div class="skills-card-img name"><img src="img/impala.jpg" alt=""></div>
+        </div>
+
+        <div class="skills-card">
+            <div class="skills-card-name  bar">DSA
+
+            </div>
+            <div class="skills-card-img name"><img src="img/dsa.png" alt=""></div>
+        </div>
+
+        <div class="skills-card">
+            <div class="skills-card-name  bar">Prompt
+
+            </div>
+            <div class="skills-card-img name"><img src="img/prompt.png" alt=""></div>
+        </div>
     </section>
 
     <!-------------------------------------------------- SKILLS ---------------------------------------------------->
@@ -316,7 +350,54 @@
         </div>
 
 
+
+        <!-------------------------------------------------- PROJECT 6 ---------------------------------------------------->
+        <div class="project-card">
+            <p class="project-description"> Library Management System  </p>
+            <img src="img/libManagement.png" alt="">
+            <div class="desc">A library management system is a software application designed to facilitate the management of 
+                libraries, including tasks such as cataloging library resources, tracking borrowed items, 
+                managing patron information, and handling administrative functions.</div>
+            <title class="project-title">Library Management System</title>
+            <h3 class="project-tech-stack">Python| Flask | Shell | HTML | CSS</h3>
+            <div>
+                <p class="project-github-link"><a href="https://github.com/SakthivelMadhu/Library-Management-System"><i
+                            class="fa-brands fa-github"></i></a>
+                </p>
+                <p class="project-deployed-link"><a href="https://drive.google.com/drive/folders/1981eZ9LRV9zAKdMU7bveDAFyTEqr9DDp?usp=sharing"> Deployed
+                        link</a>
+                </p>
+            </div>
+
+        </div>
         
+
+
+  <!-------------------------------------------------- PROJECT 6 ---------------------------------------------------->
+  <div class="project-card">
+    <p class="project-description"> Intelligent Job Matching System </p>
+    <img src="img/job_matching.jpg" alt="">
+    <div class="desc">This project is a backend system for an intelligent job matching application. It is 
+        built using Flask and MongoDB , to facilitate the matching of job seekers with job postings. 
+        This project includes features such as 
+        managing job seekers, job postings, applications, and skill sets.</div>
+    <title class="project-title">Intelligent Job Matching System</title>
+    <h3 class="project-tech-stack">Python| C | PowerShell | HTML | CSS | JavaScript</h3>
+    <div>
+        <p class="project-github-link"><a href="https://github.com/SakthivelMadhu/Job_Matching_System"><i
+                    class="fa-brands fa-github"></i></a>
+        </p>
+        <p class="project-deployed-link"><a href="https://drive.google.com/drive/folders/1FLblJSppKn4XmFLDyUJUOooCuB_d9h_v?usp=sharing"> Deployed
+                link</a>
+        </p>
+    </div>
+
+</div>
+
+
+
+
+
 
     </section>
 
