--- a/index.html
+++ b/index.html
@@ -224,6 +224,59 @@
     <h1 class="mainheading" id="projectss">PROJECTS</h1>
     <section title="Projects" id="projects">
 
+        <div class="project-card">
+        <p class="project-description">Purchase Order Management System</p>
+        <img src="img/purchase_system.png" alt="">
+        <div class="desc">
+            Complete Purchase Lifecycle System including Purchase Requests, Purchase Orders,
+            GRN, Returns, Bills, and Stock Transfers. Designed for multi-location inventory
+            handling with seamless workflow automation.
+            <br><br>
+            Features:
+            • Purchase Requests & Approvals
+            • Purchase Job ( doing purchase, sales and GRN into internal companies)
+            • Purchase Orders
+            • GRN & Put-away
+            • Returns & Bills
+            • Stock Transfer Between Locations
+        </div>
+        <h3 class="project-tech-stack">Java | Spring Boot | PostgresSql | REST APIs</h3>
+    </div>
+
+    <div class="project-card">
+        <p class="project-description">Vendor Management System</p>
+        <img src="img/vendor_system.png" alt="">
+        <div class="desc">
+            Centralized Vendor Management platform supporting vendor onboarding,
+            verification, and compliance workflows.
+            <br><br>
+            Features:
+            • Vendor Creation
+            • Vendor TOT Tracking
+            • 3PL Verification
+            • GST, PAN & Bank Validation
+            • Compliance Management
+        </div>
+        <h3 class="project-tech-stack">Java | Spring Boot | PostgresSql | Microservices</h3>
+    </div>
+
+    <div class="project-card">
+        <p class="project-description">Banking & Finance Management System</p>
+        <img src="img/banking_system.png" alt="">
+        <div class="desc">
+            A full-fledged finance module handling bank accounts, reconciliation,
+            loans, credit cards, POS payments, and liabilities.
+            <br><br>
+            Features:
+            • Bank Creation & Management
+            • Automated Reconciliation
+            • Loans & Credit Cards
+            • POS Payments
+            • Financial Reports
+        </div>
+        <h3 class="project-tech-stack">Java | Spring Boot | PostgresSql | FinTech APIs</h3>
+    </div>
+
         <!-------------------------------------------------- PROJECT 1 ---------------------------------------------------->
         <div class="project-card">
             <p class="project-description">MasaiBuilds - Teamiply </p>
