--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
         <title>About</title>
         <h1 id="user-detail-name"> </h1>
         <h2 id="user-detail-intro">
-            Aspiring Full Stack Web Developer, with a Specialization
-            in CSS, SpringBoot, JavaScript and JAVA and a good grasp of
-            core java concept. collaborative team player who is
-            professional in working on interdisciplinary projects.
-            Looking forward to kickstart the career in the IT sector.
+            Backend Engineer specializing in building large-scale, automation-first platforms for procurement and
+finance domains, with deep expertise in distributed systems, workflow orchestration, and
+high-throughput APIs. Proven at delivering reliable, fault-tolerant, and performance-critical systems
+with a strong focus on correctness, scalability, and clean architecture
         </h2>
     </section>
 
